# snapd-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: categories.rs  find.rs  installed_snaps.rs
resources/example_snap_data/: bare.json  canonical-livepatch.json  code.json  core.json  core18.json  core20.json  core22.json  core24.json  cups.json  desktop-security-center.json  discord.json  firefox.json  firmware-updater.json  gaming-graphics-core22.json  gimp.json  gnome-3-28-1804.json  gnome-3-38-2004.json  gnome-42-2204.json  gnome-46-2404.json  gtk-common-themes.json  gtk2-common-themes.json  libreoffice.json  lxd.json  mesa-2404.json  prompting-client.json  signal-desktop.json  snap-store.json  snapd-desktop-integration.json  snapd.json  steam.json  thunderbird.json  zoom-client.json
src/: lib.rs  response.rs
