[package]
name = "snapd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = [ "serde" ] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.4", features = ["http1", "tokio", "client-legacy"] }
hyper = { version = "1.3.1", features = ["client", "http1"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.61"
tokio-stream = "0.1.15"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "process", "signal", "rt-multi-thread"] }
tracing = "0.1.40"
serde_urlencoded = "0.7.1"

[dev-dependencies]
simple_test_case = "1.2.0"

